# stock_crawler

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_live  LICENSE  README.md  Rocket.toml  app.json  build.bat  build.ps1  build.rs  build.sh  control.sh  deny.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  generator-generic-ossf-slsa3-publish.yml  rust.yml
benches/: cache_snapshot_lookup.rs  daily_quote_mapper.rs  twse_quote_parser.rs
docs/: Architecture-Phase-1.md  Documentation-Index.md  Execution-Plan.md  Module-Analysis.md  Performance-Notes.md  README.md  Refactoring-Plan.md  Refactoring-Progress.md  Refactoring-Summary.md  Risks-and-TODO.md  Testing-Strategy.md  architecture.md  github_actions_recommendations.md  manual-backfill-web.md  refactor_ddd_continuation_plan.md  refactor_staged_plan_zh_tw.md
docs/api/: API-Guide.md
docs/checklists/: phase-0-5-baseline.md  phase-0-5-ignored-tests-exemptions.md  phase-0-checklist.md  phase-1-checklist.md  phase-10-checklist.md  phase-11-checklist-draft.md  phase-11-checklist.md  phase-12-checklist-draft.md  phase-12-checklist.md  phase-13-checklist.md  phase-14-checklist.md  phase-15-checklist.md  phase-16-checklist.md  phase-17-checklist.md  phase-2-checklist.md  phase-3-checklist.md  phase-4a-checklist.md  phase-4b-checklist.md  phase-4c-checklist.md  phase-5a-checklist.md  phase-5b-checklist.md  phase-6-checklist.md  phase-9-checklist.md
docs/decisions/: ADR-001-Phase-1-Keep-Single-Crate.md
docs/diagrams/: Architecture.mmd  Dependency.mmd
etc/proto/: buf.yaml  control.proto  manual_backfill.proto  stock.proto
etc/proto/basic/: basic.proto
etc/proto/control/: control.proto
etc/proto/manual_backfill/: manual_backfill.proto
etc/proto/stock/: stock.proto
etc/sql/: config.sql  daily_money_history.sql  daily_money_history_detail.sql  daily_money_history_detail_more.sql  daily_money_history_member.sql  daily_quote.sql  daily_stock_price_stats.sql  dividend.sql  dividend_record_detail.sql  dividend_record_detail_more.sql  estimate.sql  financial_statement.sql  index.sql  init.sql  last_daily_quotes.sql  market_category.sql  migration_20260403_daily_money_history_to_daily_money_history_member.sql  migration_20260404_add_etf_industries.sql  migration_20260404_add_etf_stocks.sql  quote_history_record.sql  revenue.sql  revenue_last_date.sql  stock_exchange_market.sql  stock_index.sql  stock_industry.sql  stock_ownership_details.sql  stock_word.sql  stocks.sql  trace.sql  yield_rank.sql
proto/: basic.proto  control.proto  stock.proto
scripts/: build_nginx.sh
src/: cache.rs  config.rs  declare.rs  lib.rs  logging.rs  main.rs  manual_backfill.rs  scheduler.rs
src/app/: manual_backfill.rs  mod.rs  scheduler.rs
src/app/backfill/: acl.rs  delisted_company.rs  etf.rs  isin.rs  mod.rs  qualified_foreign_institutional_investor.rs  quote.rs  revenue.rs  stock_weight.rs  taiwan_stock_index.rs
src/app/calculation/: daily_quotes.rs  dividend_record.rs  estimated_price.rs  money_history.rs
src/app/event/: handlers.rs  mod.rs
src/backfill/: delisted_company.rs  etf.rs  isin.rs  mod.rs  qualified_foreign_institutional_investor.rs  quote.rs  revenue.rs  stock_weight.rs  taiwan_stock_index.rs
src/backfill/dividend/: missing_or_multiple.rs  mod.rs  payout_ratio.rs  unannounced_ex_dividend_date.rs
src/backfill/financial_statement/: annual.rs  mod.rs  quarter.rs
src/backfill/net_asset_value_per_share/: emerging.rs  zero_value.rs
src/bot/: mod.rs  telegram.rs
src/cache/: lookup.rs  realtime.rs  share.rs  ttl.rs
src/calculation/: daily_quotes.rs  dividend_record.rs  estimated_price.rs  mod.rs  money_history.rs  price_stats.rs
src/config/: mod.rs
src/core/: config.rs  declare.rs  mod.rs
src/core/logging/: mod.rs  rotate.rs
src/core/util/: atomic.rs  convert.rs  datetime.rs  diagnostics.rs  mod.rs  text.rs
src/crawler/: mod.rs  price_tasks.rs  share.rs
src/crawler/afraid/: mod.rs
src/crawler/bank_of_taiwan/: mod.rs
src/crawler/bigdatacloud/: mod.rs
src/crawler/cmoney/: mod.rs  price.rs
src/crawler/cnyes/: mod.rs  price.rs
src/crawler/dynu/: mod.rs
src/crawler/fbs/: annual_profit.rs  mod.rs
src/crawler/fugle/: price.rs
src/crawler/goodinfo/: dividend.rs
src/crawler/histock/: annual_profit.rs  mod.rs  price.rs
src/crawler/ipconfig/: mod.rs
src/crawler/ipify/: mod.rs
src/crawler/ipinfo/: mod.rs
src/crawler/localhost/: mod.rs
src/crawler/megatime/: price.rs
src/crawler/moneydj/: annual_profit.rs  mod.rs
src/crawler/mops/: annual_profit.rs  mod.rs
src/crawler/myip/: mod.rs
src/crawler/noip/: mod.rs
src/database/: mod.rs
src/domain/: events.rs  mod.rs
src/event/: ddns.rs  mod.rs
src/infra/: mod.rs
src/interfaces/: mod.rs
src/internal/: cache.rs  cache_share.rs  config.rs  database.rs  free_dns.rs  mod.rs  scheduler.rs
src/logging/: mod.rs  rotate.rs
src/nosql/: mod.rs  redis.rs
src/rpc/: basic.rs  control.rs  manual_backfill.rs  mod.rs  stock.rs
src/util/: atomic.rs  convert.rs  datetime.rs  diagnostics.rs  map.rs  mod.rs  text.rs
src/web/: backfill_admin.rs  manual_backfill.rs  mod.rs
tests/fixtures/: twse_quote.json
(+471 files in other folders)
