[package]
name = "stock_crawler"
version = "0.1.0"
edition = "2021"
authors = ["Eddie <eddiea.chen@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = "0.5.0-rc.3"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
concat-string = "1.0.1"
config = "0.14"
#crossbeam = "0.8"
#crossbeam-channel = "0.5"
deadpool-redis = "0.15.0"
digest = "0.10"
dotenv = "0.15"
encoding = "0.2"
futures ="0.3"
hashbrown = "0.14"
hex = "0.4"
lazy_static = "1.4"
log = { version = "^0.4", features = ["std"] }
num_cpus = "1.16"
once_cell = "1.19"
openssl = { version = "0.10", features = ["vendored"] }
prost = "0.12"
rand = "0.8"
rayon = "1.10"
redis = { version = "0.25", features = ["tokio-comp"]  }
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "brotli", "deflate", "gzip", "cookies"] }
rust_decimal = "1.35"
rust_decimal_macros = "1.34"
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = { version = "0.10", features = [] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "time", "chrono", "bigdecimal", "macros", "rust_decimal"] }
strum = { version = "0.26", features = ["derive"]}
strum_macros = "0.26"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.10"
tokio-retry = "0.3"
tokio-test = "0.4"
tonic = { version = "0.11", features = ["transport", "tls", "channel", "gzip"] }
ttl_cache = "0.5"
urlencoding = "2.1"

[build-dependencies]
tonic-build = "0.11"
