[package]
name = "stock_crawler"
version = "0.1.0"
edition = "2021"
authors = ["Eddie <eddiea.chen@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = "0.5.0-rc.3"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
concat-string = "1.0.1"
config = "0.15"
#crossbeam = "0.8"
#crossbeam-channel = "0.5"
deadpool-redis = "0.20.0"
#digest = "0.10"
dotenv = "0.15"
encoding = "0.2"
futures ="0.3"
hashbrown = "0.15"
hex = "0.4"
#lazy_static = "1.5"
#log = { version = "^0.4", features = ["std"] }
num_cpus = "1.16"
once_cell = "1.21"
#openssl = { version = "0.10", features = ["vendored"] }
prost = "0.13"
rand = "0.9"
rayon = "1.10"
#redis = { version = "0.28", features = ["tokio-comp"]  }
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "brotli", "deflate", "gzip", "cookies", "zstd"] }
rust_decimal = "1.37"
rust_decimal_macros = "1.37"
scraper = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = { version = "0.10", features = [] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "time", "chrono", "bigdecimal", "macros", "rust_decimal"] }
strum = { version = "0.27.0", features = ["derive"]}
strum_macros = "0.27.0"
tokio = { version = "1.44", features = ["full"] }
tokio-cron-scheduler = "0.13"
tokio-retry = "0.3"
tokio-test = "0.4"
tonic = { version = "0.13.0", features = ["transport", "channel", "tls-ring", "gzip"] }
ttl_cache = "0.5"
urlencoding = "2.1"
lazy_static = "1.5.0"
scopeguard = "1.2.0"

[build-dependencies]
tonic-build = "0.13.0"
