[package]
name = "stock_crawler"
version = "0.1.0"
edition = "2021"
authors = ["Eddie <eddiea.chen@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = "0.5.0-rc.3"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
concat-string = "1.0.1"
config = "0.15"
#crossbeam = "0.8"
#crossbeam-channel = "0.5"
deadpool-redis = "0.22"
#digest = "0.10"
dotenv = "0.15"
encoding = "0.2"
futures ="0.3"
hashbrown = "0.16"
hex = "0.4"
#lazy_static = "1.5"
#log = { version = "^0.4", features = ["std"] }
num_cpus = "1.17"
once_cell = "1.21"
parking_lot = "0.12"
#openssl = { version = "0.10", features = ["vendored"] }
prost = "0.14"
rand = "0.10"
tonic-prost = "0.14"
rayon = "1.11"
#redis = { version = "0.28", features = ["tokio-comp"]  }
regex = "1"
reqwest = { version = "0.13", features = ["json", "form", "blocking", "brotli", "deflate", "gzip", "cookies", "zstd", "http2", "hickory-dns"] }
rust_decimal = "1.40"
rust_decimal_macros = "1.40"
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = { version = "0.10", features = [] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "time", "chrono", "bigdecimal", "macros", "rust_decimal"] }
strum = { version = "0.27", features = ["derive"]}
strum_macros = "0.27"
tokio = { version = "1.49", features = ["full"] }
tokio-cron-scheduler = "0.15"
tokio-retry = "0.3"
tokio-stream = "0.1"
tokio-test = "0.4"
tonic = { version = "0.14", features = ["transport", "channel", "tls-ring", "gzip"] }
ttl_cache = "0.5"
urlencoding = "2.1"
lazy_static = "1.5"
scopeguard = "1.2"

[build-dependencies]
tonic-prost-build = "0.14"
